# posplexity-mail

./: README.md  fetch.py  init.py  main.py  pyproject.toml  test.py
common/config/: config.py
common/types/: types.py
src/: extract.py  fetch.py
src/llm/gemini/: inference.py
src/llm/gpt/: inference.py
src/llm/prompt/: make_summary.json
src/llm_wrapper/deepseek/: inference.py
src/llm_wrapper/gemini/: inference.py
src/llm_wrapper/prompt/: chat_basic.json  extract.json  query_refinement.json  reranking.json
src/utils/: decorator.py  utils.py
