[tool.poetry]
name = "posplexity-mail"
version = "0.1.0"
description = ""
authors = ["chaewon-huh <cw.huh@postech.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1.20.0"
openai = "^1.64.0"
pillow = "^11.1.0"
google-genai = "^1.2.0"
botocore = "^1.36.26"
boto3 = "^1.36.26"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
